1. Completed implementation of OSGiBundleArchive. It now implements getSubArchive corretcly. It also exposes the bundle classpath resources as an iterator. The iterator creation is expensive, but I guess it is OK for the time being. Each bundle-classpath element of a bundle is modelled as a ReadableArchive.
2. Changed manifest header used to identify ejb bundle to Export-EJB. This header specifies a command separated
list of EJB names to be bound in OSGi service registry. Two special values exist, viz: ALL and NONE. 

3. Fixed persistence.xml discovery login in JPABundleProcessor. With this, JPA inside WAB works.

4. Extenders are now stopped when the corresponding bundle is unintalled.

5. Fix to issue 11606: provide custom faces and faclet config providers. We still need to provide custom
AnnotationProvider.

svn path=/trunk/; revision=35825


Former-commit-id: 20f89e1f7b8c3bc6b61702ce847a5105946eb7f9